--- a/app/src/main/res/layout/fragment_table.xml
+++ b/app/src/main/res/layout/fragment_table.xml
@@ -106,7 +106,8 @@
     <com.zhuangfei.timetable.view.WeekView
         android:id="@+id/id_weekview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
 
     <com.zhuangfei.timetable.TimetableView
         android:id="@+id/id_timetableView"
