fix:部分获取classTimeSection数组闪退的bug perf:支持设置每次启动APP同步课表

--- a/app/src/main/res/values/entries_list_preference.xml
+++ b/app/src/main/res/values/entries_list_preference.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="day_entities">
+        <item>每次</item>
         <item>1天</item>
         <item>3天</item>
         <item>7天</item>
     </string-array>
     <string-array name="day_values">
+        <item>0</item>
         <item>1</item>
         <item>3</item>
         <item>7</item>
