--- a/app/src/main/res/layout/activity_more_url.xml
+++ b/app/src/main/res/layout/activity_more_url.xml
@@ -28,25 +28,6 @@
             android:layout_marginBottom="8dp"
             android:orientation="vertical">
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?attr/selectableItemBackground"
-                android:clickable="true"
-                android:focusable="true"
-                android:onClick="resourceCenter">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="start|center"
-                    android:layout_margin="12dp"
-                    android:text="@string/text_resource_center"
-                    android:textColor="#AA000000"
-                    android:textSize="18sp" />
-
-            </FrameLayout>
-
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.1dp"
@@ -210,6 +191,78 @@
                     android:layout_gravity="start|center"
                     android:layout_margin="12dp"
                     android:text="@string/text_school_song"
+                    android:textColor="#AA000000"
+                    android:textSize="18sp" />
+
+            </FrameLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                android:background="@color/xui_config_color_gray_9" />
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:onClick="mapHj">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start|center"
+                    android:layout_margin="12dp"
+                    android:text="@string/text_map_hj"
+                    android:textColor="#AA000000"
+                    android:textSize="18sp" />
+
+            </FrameLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                android:background="@color/xui_config_color_gray_9" />
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:onClick="mapJjl">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start|center"
+                    android:layout_margin="12dp"
+                    android:text="@string/text_map_jjl"
+                    android:textColor="#AA000000"
+                    android:textSize="18sp" />
+
+            </FrameLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                android:background="@color/xui_config_color_gray_9" />
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:onClick="resourceCenter">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start|center"
+                    android:layout_margin="12dp"
+                    android:text="@string/text_resource_center"
                     android:textColor="#AA000000"
                     android:textSize="18sp" />
 
