--- a/app/src/main/res/layout/fragement_more.xml
+++ b/app/src/main/res/layout/fragement_more.xml
@@ -494,25 +494,24 @@
                         </FrameLayout>
 
                         <FrameLayout
-                            android:id="@+id/more_url_staff"
+                            android:id="@+id/more_url_more"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_gravity="center"
                             android:layout_weight="1">
 
                             <ImageView
-                                android:id="@+id/more_url_staff_picture"
-                                android:layout_width="32dp"
-                                android:layout_height="32dp"
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
                                 android:layout_gravity="top|center"
-                                android:src="@drawable/m_yuangong"
+                                android:src="@drawable/m_more"
                                 tools:ignore="ContentDescription" />
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="bottom|center"
-                                android:text="@string/moreFun_url_staff"
+                                android:text="@string/moreFun_url_more"
                                 android:textSize="13sp" />
 
                         </FrameLayout>
@@ -551,29 +550,6 @@
                         </FrameLayout>
 
                         <FrameLayout
-                            android:id="@+id/more_url_more"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_gravity="center"
-                            android:layout_weight="1">
-
-                            <ImageView
-                                android:layout_width="30dp"
-                                android:layout_height="30dp"
-                                android:layout_gravity="top|center"
-                                android:src="@drawable/m_more"
-                                tools:ignore="ContentDescription" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="bottom|center"
-                                android:text="@string/moreFun_url_more"
-                                android:textSize="13sp" />
-
-                        </FrameLayout>
-
-                        <FrameLayout
                             android:id="@+id/more_url_index"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
@@ -593,6 +569,30 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="bottom|center"
                                 android:text="@string/moreFun_url_index"
+                                android:textSize="13sp" />
+
+                        </FrameLayout>
+
+                        <FrameLayout
+                            android:id="@+id/more_qq_group"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
+                            android:layout_weight="1">
+
+                            <ImageView
+                                android:layout_width="33dp"
+                                android:layout_height="33dp"
+                                android:layout_gravity="top|center"
+                                android:layout_marginTop="1dp"
+                                android:src="@drawable/m_qq_group"
+                                tools:ignore="ContentDescription" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="bottom|center"
+                                android:text="@string/moreFun_qqGroup"
                                 android:textSize="13sp" />
 
                         </FrameLayout>
