--- a/app/src/main/res/xml/cloud_config_parms.xml
+++ b/app/src/main/res/xml/cloud_config_parms.xml
@@ -34,6 +34,12 @@
 
     <entry>
         <key>classTime</key>
-        <value>13:00~14:30;8:25~10:00;10:25~12:00;14:25~16:05;16:25~18:05;19:00~20:30;21:00~22:30</value>
+        <value>13:00~14:30;8:25~10:00;10:25~12:00;14:25~16:05;16:25~18:05;19:00~20:30;21:00~22:30
+        </value>
+    </entry>
+
+    <entry>
+        <key>groupSetting</key>
+        <value>0000000000000000</value>
     </entry>
 </defaultsMap>
