perf:同步在线参数默认值 perf:调整协助测试功能到关于页面

--- a/app/src/main/res/xml/cloud_config_parms.xml
+++ b/app/src/main/res/xml/cloud_config_parms.xml
@@ -14,7 +14,7 @@
 
     <entry>
         <key>cloudUrl</key>
-        <value>https://cloud.yvyan.top/index.php/s/8EczotKAbSjfXPk</value>
+        <value>https://i.yvyan.top/index.php/s/DbB59BN84s3B8Yj</value>
     </entry>
 
     <entry>
@@ -40,6 +40,6 @@
 
     <entry>
         <key>groupSetting</key>
-        <value>0000000000000000</value>
+        <value>0010000000000000</value>
     </entry>
 </defaultsMap>
