--- a/app/src/main/res/layout/activity_q_q_group.xml
+++ b/app/src/main/res/layout/activity_q_q_group.xml
@@ -82,6 +82,30 @@
                 android:layout_height="0.1dp"
                 android:background="@color/xui_config_color_gray_9" />
 
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:onClick="stdioMusic">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start|center"
+                    android:layout_margin="12dp"
+                    android:text="@string/text_stdio_music"
+                    android:textColor="#AA000000"
+                    android:textSize="18sp" />
+
+            </FrameLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                android:background="@color/xui_config_color_gray_9" />
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/password_help"
                 android:layout_width="match_parent"
