feat: 小部件刷新事件

--- a/app/src/main/res/layout/guet_table_app_widget.xml
+++ b/app/src/main/res/layout/guet_table_app_widget.xml
@@ -5,53 +5,51 @@
     android:orientation="vertical"
     android:padding="@dimen/widget_margin">
 
-    <TextView
-        android:id="@+id/tv_term"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:text="当前学期："
-        android:textColor="@color/xui_config_color_white"
-        android:textSize="14sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/tv_day"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:text="日期"
-        android:textColor="@color/xui_config_color_white"
-        android:textSize="14sp"
-        android:textStyle="bold" />
-
     <RelativeLayout
-        android:id="@+id/rl_week_and_refresh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/widget_tv_term"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:padding="5dp"
-            android:text="第X周"
+            android:text="@string/widget_tv_term"
             android:textColor="@color/xui_config_color_white"
             android:textSize="14sp"
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/btn_refresh"
-            android:layout_width="25dp"
-            android:layout_height="wrap_content"
+            android:id="@+id/widget_btn_refresh"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_alignParentEnd="true"
-            android:background="@color/app_blue1"
+            android:background="@drawable/ic_refresh"
             android:padding="5dp"
-            android:text="刷新"
-            android:textColor="@color/xui_config_color_white"
             tools:ignore="RelativeOverlap" />
-
     </RelativeLayout>
+
+
+    <TextView
+        android:id="@+id/widget_tv_day"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:text="@string/widget_tv_date"
+        android:textColor="@color/xui_config_color_white"
+        android:textSize="14sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/widget_week"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:text="第X周"
+        android:textColor="@color/xui_config_color_white"
+        android:textSize="14sp"
+        android:textStyle="bold" />
 
 
 </LinearLayout>
