--- a/app/src/main/res/xml/guet_table_app_widget_info.xml
+++ b/app/src/main/res/xml/guet_table_app_widget_info.xml
@@ -4,7 +4,7 @@
     android:initialLayout="@layout/guet_table_app_widget"
     android:minWidth="250dp"
     android:minHeight="110dp"
-    android:previewImage="@drawable/example_appwidget_preview"
+    android:previewImage="@drawable/ic_widget"
     android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="86400000"
-    android:widgetCategory="home_screen"></appwidget-provider>
+    android:updatePeriodMillis="1800000"
+    android:widgetCategory="home_screen" />
