perf: 小部件样式调整&提供考试显示

--- a/app/src/main/res/layout/course_widget_cardview.xml
+++ b/app/src/main/res/layout/course_widget_cardview.xml
@@ -9,7 +9,7 @@
 
     <FrameLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1">
 
         <TextView
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:textColor="@color/xui_config_color_white"
-            android:textSize="14sp"
+            android:textSize="22sp"
             android:textStyle="bold" />
 
     </FrameLayout>
@@ -26,7 +26,7 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="4"
+        android:layout_weight="6"
         android:orientation="vertical">
 
         <TextView
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:textColor="@color/xui_config_color_white"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:textStyle="bold" />
 
         <LinearLayout
