--- a/app/src/main/res/layout/guet_table_app_widget.xml
+++ b/app/src/main/res/layout/guet_table_app_widget.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ll_widget"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/shape_corner"
@@ -38,7 +39,10 @@
         android:id="@+id/widget_lv_class"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp" />
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:divider="@color/app_white2"
+        android:dividerHeight="0.5dp" />
 
 
 </LinearLayout>
