fix:日期变更后微件不会立刻刷新的bug perf:完善微件刷新条件 fix:无课提示不会显示的bug

--- a/app/src/main/res/layout/guet_table_app_widget.xml
+++ b/app/src/main/res/layout/guet_table_app_widget.xml
@@ -53,5 +53,17 @@
         android:divider="@color/app_white2"
         android:dividerHeight="0.5dp" />
 
+    <TextView
+        android:id="@+id/rl_empty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:gravity="center"
+        android:text="@string/widget_tip_empty"
+        android:textSize="18sp"
+        android:textColor="@color/xui_config_color_white"
+        android:textStyle="bold" />
+
 
 </RelativeLayout>
