feat: 可按学期查看已选课程

--- a/app/src/main/res/layout/activity_selected_course.xml
+++ b/app/src/main/res/layout/activity_selected_course.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -54,10 +55,49 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:orientation="horizontal">
+
+        <com.xuexiang.xui.widget.spinner.materialspinner.MaterialSpinner
+            android:id="@+id/spinner_course_term"
+            style="@style/Material.SpinnerStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_weight="3"
+            android:textColor="@color/app_black"
+            app:ms_background_color="@color/app_white2" />
+
+        <com.xuexiang.xui.widget.button.ButtonView
+            android:id="@+id/btn_query_course"
+            style="@style/ButtonView.Green"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:padding="5dp"
+            android:text="查询"
+            android:textSize="14sp" />
+
+        <com.xuexiang.xui.widget.button.ButtonView
+            android:id="@+id/btn_term_reset"
+            style="@style/ButtonView.Blue"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_weight="2"
+            android:padding="5dp"
+            android:text="重置为当前学期"
+            android:textSize="14sp" />
+
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_selected_course"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="5dp" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
