--- a/app/src/main/res/layout/selected_course_cardview.xml
+++ b/app/src/main/res/layout/selected_course_cardview.xml
@@ -1,72 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
     android:orientation="vertical">
 
-    <View
-        android:id="@+id/gapLine_selected_course"
-        android:layout_width="0dp"
-        android:layout_height="0.5dp"
-        android:background="@color/theme_gray"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
-        android:id="@+id/selected_courseName"
-        android:layout_width="0dp"
+        android:id="@+id/header_term_course"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         android:gravity="center"
-        android:text="名称"
-        android:textAlignment="center"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@id/selected_courseQuality"
-        app:layout_constraintHorizontal_weight="3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/gapLine_selected_course" />
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp"
+        android:visibility="gone" />
 
-    <TextView
-        android:id="@+id/selected_courseQuality"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:gravity="center"
-        android:text="性质"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@id/selected_courseCredit"
-        app:layout_constraintHorizontal_weight="1.8"
-        app:layout_constraintStart_toEndOf="@id/selected_courseName"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/selected_courseCredit"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:gravity="center"
-        android:text="学分"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@id/selected_selectType"
-        app:layout_constraintHorizontal_weight="0.8"
-        app:layout_constraintStart_toEndOf="@id/selected_courseQuality"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/selected_courseName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:text="名称"
+            android:textAlignment="center"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toStartOf="@id/selected_courseQuality"
+            app:layout_constraintHorizontal_weight="3"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/selected_selectType"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:gravity="center"
-        android:text="类别"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_weight="0.8"
-        app:layout_constraintStart_toEndOf="@id/selected_courseCredit"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/selected_courseQuality"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:singleLine="true"
+            android:text="性质"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toStartOf="@id/selected_courseCredit"
+            app:layout_constraintHorizontal_weight="1.8"
+            app:layout_constraintStart_toEndOf="@id/selected_courseName"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/selected_courseCredit"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:text="学分"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toStartOf="@id/selected_selectType"
+            app:layout_constraintHorizontal_weight="0.8"
+            app:layout_constraintStart_toEndOf="@id/selected_courseQuality"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/selected_selectType"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:text="类别"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_weight="0.8"
+            app:layout_constraintStart_toEndOf="@id/selected_courseCredit"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:id="@+id/gapLine_selected_course"
+            android:layout_width="0dp"
+            android:layout_height="0.6dp"
+            android:background="@color/theme_gray"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/selected_selectType" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
