perf:删除大量无用资源文件 fix:bugly更新无法自定义关闭的bug perf:默认打开更新检测 perf:已选课程点击默认学期自动更新内容 perf:更新部分文案和链接 perf:修改微件图标

--- a/app/src/main/res/xml/guet_table_app_widget_info.xml
+++ b/app/src/main/res/xml/guet_table_app_widget_info.xml
@@ -4,7 +4,7 @@
     android:initialLayout="@layout/guet_table_app_widget"
     android:minWidth="250dp"
     android:minHeight="110dp"
-    android:previewImage="@drawable/ic_widget"
+    android:previewImage="@drawable/ic_schedule"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="1800000"
     android:widgetCategory="home_screen" />
