--- a/app/src/main/res/layout/activity_personalized.xml
+++ b/app/src/main/res/layout/activity_personalized.xml
@@ -153,7 +153,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
-                        android:text="仅图库图片支持裁剪" />
+                        android:text="建议同时将标题栏设置为完全透明" />
 
                     <View
                         android:layout_width="match_parent"
