--- a/app/src/main/res/layout/activity_selected_course.xml
+++ b/app/src/main/res/layout/activity_selected_course.xml
@@ -69,6 +69,7 @@
             android:layout_margin="5dp"
             android:layout_weight="3"
             android:textColor="@color/app_black"
+            android:textSize="14sp"
             app:ms_background_color="@color/app_white2" />
 
         <com.xuexiang.xui.widget.button.ButtonView
@@ -76,6 +77,7 @@
             style="@style/ButtonView.Green"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_margin="5dp"
             android:layout_weight="1"
             android:padding="5dp"
@@ -87,6 +89,7 @@
             style="@style/ButtonView.Blue"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_margin="5dp"
             android:layout_weight="2"
             android:padding="5dp"
