--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,12 +21,25 @@
             tools:ignore="ContentDescription" />
 
         <TextView
+            android:id="@+id/title"
             style="@style/TextStyle.Title"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_margin="15dp"
             android:text="@string/app_name"
             android:textSize="35sp"
+            android:layout_centerHorizontal="true"
             android:textStyle="bold" />
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="13dp"
+            android:src="@drawable/p_bangzhu"
+            android:onClick="showHelp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="20dp"
+            tools:ignore="ContentDescription" />
 
     </RelativeLayout>
 
@@ -214,11 +227,11 @@
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="37dp"
+            android:layout_width="43dp"
             android:layout_height="43dp"
             android:layout_centerVertical="true"
             android:layout_marginBottom="13dp"
-            android:src="@drawable/p_bangzhu"
+            android:src="@drawable/p_info"
             app:layout_constraintBottom_toBottomOf="@+id/textView"
             app:layout_constraintEnd_toStartOf="@+id/guideline5"
             app:layout_constraintHorizontal_bias="0.5"
