--- a/app/src/main/res/xml/cloud_config_parms.xml
+++ b/app/src/main/res/xml/cloud_config_parms.xml
@@ -12,8 +12,7 @@
 
     <entry>
         <key>updateUrl</key>
-        <value>新的桂电课程表，简洁、好用，分享给你，点击链接下载：https://www.coolapk.com/apk/279989
-            \n(酷安官方链接，请放心访问，建议使用浏览器打开)
+        <value>新的桂电课程表，简洁、好用，分享给你，点击链接下载：https://www.coolapk.com/apk/279989 (酷安官方链接，请放心访问，建议使用浏览器打开)
         </value>
     </entry>
 
