更新版本4.1.1 fix:教务链接一直使用VPN打开的bug perf:清除无用代码

--- a/app/src/main/res/layout/activity_q_q_group.xml
+++ b/app/src/main/res/layout/activity_q_q_group.xml
@@ -125,7 +125,7 @@
                     android:layout_height="43dp"
                     android:layout_centerVertical="true"
                     android:layout_marginBottom="13dp"
-                    android:src="@drawable/p_bangzhu"
+                    android:src="@drawable/p_info"
                     app:layout_constraintBottom_toBottomOf="@+id/textView"
                     app:layout_constraintEnd_toStartOf="@+id/guideline5"
                     app:layout_constraintHorizontal_bias="0.5"
