--- a/app/src/main/res/layout/activity_grades.xml
+++ b/app/src/main/res/layout/activity_grades.xml
@@ -244,7 +244,7 @@
                     android:layout_height="29dp"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="4dp"
-                    android:src="@drawable/p_bangzhu"
+                    android:src="@drawable/p_info"
                     tools:ignore="ContentDescription" />
 
                 <TextView
