fix:VPN无法登录的问题 perf:支持两种VPN登录方式，在线配置 perf:解耦登录相关操作 perf:编译版本升级为31 perf:移除对于32位操作系统的支持，精简安装包大小

--- a/app/src/main/res/xml/cloud_config_parms.xml
+++ b/app/src/main/res/xml/cloud_config_parms.xml
@@ -46,4 +46,9 @@
         <key>groupSetting</key>
         <value>0010000000000000</value>
     </entry>
+
+    <entry>
+        <key>vpnLoginType</key>
+        <value>0</value>
+    </entry>
 </defaultsMap>
