--- a/app/src/main/res/layout/text_dialog.xml
+++ b/app/src/main/res/layout/text_dialog.xml
@@ -12,14 +12,27 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/text_dialog"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
             android:layout_marginTop="16dp"
-            android:textSize="16sp" />
+            android:layout_marginEnd="16dp"
+            android:orientation="horizontal">
+
+            <com.xuexiang.xui.widget.progress.materialprogressbar.MaterialProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/text_dialog"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp" />
+
+        </LinearLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
