更新4.2.1(42) fix:考试安排外网有时获取失败的问题 perf:微调布局 perf:去除无用依赖

--- a/app/src/main/res/layout/fragement_person.xml
+++ b/app/src/main/res/layout/fragement_person.xml
@@ -243,6 +243,11 @@
                 android:background="#C0ffffff"
                 android:orientation="vertical">
 
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="0.2dp"
+                    android:background="@color/xui_config_color_gray_9" />
+
                 <FrameLayout
                     android:id="@+id/person_personalized"
                     android:layout_width="match_parent"
@@ -520,6 +525,11 @@
                     </LinearLayout>
 
                 </RelativeLayout>
+
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="0.2dp"
+                    android:background="@color/xui_config_color_gray_9" />
 
             </LinearLayout>
 
