perf:隐藏评教相关入口

--- a/app/src/main/res/layout/fragement_more.xml
+++ b/app/src/main/res/layout/fragement_more.xml
@@ -618,6 +618,7 @@
                 android:layout_marginTop="10dp"
                 app:cardBackgroundColor="#C0ffffff"
                 app:cardCornerRadius="10dp"
+                android:visibility="gone"
                 app:cardElevation="0dp">
 
                 <LinearLayout
